[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "langchain",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "python-dotenv>=1.2.2",
]

[tool.uv.sources]
langchain = { workspace = true }
