[project]
name = "langchaincourse"
version = "0.1.0"
description = "Learning LangChain"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ipykernel>=7.3.0",
    "python-dotenv>=1.2.2",
    "langchain>=1.0.0",
    "langchain-community",
    "langchain-google-genai",
    "langchain-groq",
    "langchain-openai",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "notebook>=7.6.0",
]
